--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".Home" />
         <activity android:name=".Structure" />
+        <activity android:name=".DemonDetailActivity"/>
     </application>
 
 </manifest>
